--- a/wpf-login-app/UserPanel.xaml
+++ b/wpf-login-app/UserPanel.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:wpf_login"
         mc:Ignorable="d"
         Title="UserPanel" Height="450" Width="800" MinHeight="450" MinWidth="800"
-        Background="#E0F2F1" Closed="SaveLog">
+        WindowStartupLocation="CenterScreen" Background="#E0F2F1" Closed="SaveLog">
     <Grid>
         <TextBox x:Name="sLogin" Visibility="Collapsed"></TextBox>
         <Rectangle Fill="#26A69A" Width="460" Height="220" HorizontalAlignment="Center" VerticalAlignment="Center" RadiusX="10" RadiusY="10"/>
@@ -38,8 +38,8 @@
         <WrapPanel x:Name="editForm" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
             <WrapPanel Orientation="Vertical">
                 <WrapPanel>
-                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Center" Width="65" FontSize="14" Margin="10">Пароль</Label>
-                    <TextBox x:Name="sPass" VerticalAlignment="Center" FontSize="14" Background="Azure" MinWidth="100" Margin="10">
+                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Left" Width="65" FontSize="14" Margin="10">Пароль</Label>
+                    <TextBox x:Name="sPass" VerticalAlignment="Center" FontSize="14" Background="Azure" Width="100" Margin="10">
                         <TextBox.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="5"/>
@@ -64,8 +64,8 @@
             </WrapPanel>
             <WrapPanel Orientation="Vertical">
                 <WrapPanel>
-                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Center" Width="65" FontSize="14" Margin="10">Имя</Label>
-                    <TextBox x:Name="sName" VerticalAlignment="Center" FontSize="14" Background="Azure" MinWidth="100" Margin="10">
+                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Left" Width="70" FontSize="14" Margin="10">Имя</Label>
+                    <TextBox x:Name="sName" VerticalAlignment="Center" FontSize="14" Background="Azure" Width="100" Margin="10">
                         <TextBox.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="5"/>
@@ -74,8 +74,8 @@
                     </TextBox>
                 </WrapPanel>
                 <WrapPanel>
-                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Center" Width="65" FontSize="14" Margin="10">Телефон</Label>
-                    <TextBox x:Name="sPhone" VerticalAlignment="Center" FontSize="14" Background="Azure" MinWidth="100" Margin="10">
+                    <Label Foreground="#263238" FontWeight="Bold" HorizontalContentAlignment="Left" Width="70" FontSize="14" Margin="10">Телефон</Label>
+                    <TextBox x:Name="sPhone" VerticalAlignment="Center" FontSize="14" Background="Azure" Width="100" Margin="10">
                         <TextBox.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="5"/>
@@ -85,8 +85,6 @@
                 </WrapPanel>
             </WrapPanel>
         </WrapPanel>
-        <!--TIMER-->
-        <Label x:Name="sTimer" Width="100px" Height="25px" HorizontalAlignment="Right" VerticalAlignment="Bottom" Foreground="#263238"/>
         <!--STATUS-->
         <Label x:Name="sStatus" Foreground="#263238" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Bottom"></Label>
     </Grid>
